[package]
name = "gauze"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Leon Qadirie"]
repository = "https://github.com/leonqadirie/gauze"
homepage = "https://github.com/leonqadirie/gauze"
readme = "README.md"
description = "Probabilistic set membership filters with a simple interface"
keywords = ["filter", "bloom_filter"]

[dependencies]
bitvec = { version = "1.0.1", features = ["alloc"] }
rand = "0.9"
thiserror = "2.0"
twox-hash = "2.0"
